--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,25 +1,29 @@
 steps:
 
-#build docker container
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/hello-app', '.']
-  
-#push container to container registry
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'gcr.io/$PROJECT_ID/hello-app']
-  
-#deploy to cloud run
-- name: 'gcr.io/cloud-builders/gcloud'
-  args:
-  - 'run'
-  - 'deploy'
-  - 'cloudrunservice'
-  - '--image'
-  - 'gcr.io/$PROJECT_ID/hello-app'
-  - '--region'
-  - 'us-central1'
-  - '--platform'
-  - 'managed'
-  - '--allow-unauthenticated'
+  #build docker container
+
+  - name: 'docker/compose:1.19.0'
+    args: [ 'up', '-d' ]
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/hello-app', '.' ]
+
+  #push container to container registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [ 'push', 'gcr.io/$PROJECT_ID/hello-app' ]
+
+  #deploy to cloud run
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
+      - 'deploy'
+      - 'cloudrunservice'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/hello-app'
+      - '--region'
+      - 'us-central1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
 images:
   - 'gcr.io/$PROJECT_ID/hello-app'
