change deploy cloud run

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'cloudrunservice'
+      - 'demo-service'
       - '--image'
       - 'gcr.io/$PROJECT_ID/hello-app'
       - '--region'
