--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 
 services:
-  gcb-demo:
+  hello-app:
     build:
       context: .
-    container_name: "gcb-demo"
+    container_name: "hello-app"
     ports:
       - "8080:8080"
